# AutoGreen

./: .gitignore  .gitmodules  README.md  requirements.txt
Arduino/: motorstepper.ino
Arduino/AutoGreen/: AutoGreen.ino
Arduino/AutoGreen/src/ClientServer/: Client.h  ClientServerManager.h  Server.h  arduino_secrets.h
Arduino/AutoGreen/src/MQTT/: Schedule.hpp  VectorQueue.hpp  mqtt.hpp
Arduino/AutoGreen/src/MatrixLed/: MatrixLed.h
Arduino/AutoGreen/src/MotorStepper/: MotorStepper.h
Arduino/Camera/: Camera.ino
Arduino/Camera/src/MQTT/: Queue.hpp  Schedule.hpp  mqtt.hpp
Arduino/FarmModel1/src/ClientServer/: Client.h
Arduino/FarmModel1/src/MatrixLed/: MatrixLed.h
Arduino/Server_Client/: Client.h  Server.h  sketch_apr2a.ino
Core/: CMakeLists.txt  configure.sh
Core/include/: MqttClient.hpp  MqttMessage.hpp  MqttReceiver.hpp  SensorProcessor.hpp  Sensors.hpp
Core/include/Model/: Model.hpp
Core/src/: CMakeLists.txt  Core.cpp
Core/src/Camera/: CMakeLists.txt  Publisher.cpp  Subscriber.cpp
Core/src/Motor/: CMakeLists.txt  Publisher.cpp  Subscriber.cpp
Core/src/utils/: MqttReceiver.cpp  SensorProcessor.cpp
Model/: Yolo.py  generateDataset.sh  recognize_little_tomato.py  requirements.txt
Model/Dataset_with_validation/: dataset.yaml
Model/Dataset_with_validation/annotations/: test_resized.json  val_resized.json
Model/Dataset_with_validation/labels/: train.cache  val.cache
Model/Dataset_with_validation/labels/test/: IMG_1113.txt  IMG_1116.txt  IMG_1118.txt  IMG_1135.txt  IMG_1137.txt  IMG_1140.txt  IMG_1158.txt  IMG_1159.txt  IMG_1168.txt  IMG_1173.txt  IMG_1174.txt  IMG_1177.txt  IMG_1178.txt  IMG_1193.txt  IMG_1194.txt  IMG_1200.txt  IMG_1225.txt  IMG_1227.txt  IMG_1239.txt  IMG_1245.txt  IMG_1248.txt  IMG_1251.txt  IMG_1261.txt  IMG_1273.txt  IMG_1277.txt  IMG_1280.txt  IMG_1292.txt  IMG_20191215_111853.txt  IMG_20191215_111917.txt  IMG_20191215_111930.txt  IMG_20191215_111933.txt  IMG_20191215_111941.txt  IMG_20191215_111951_1.txt  IMG_20191215_111957.txt  IMG_20191215_112033.txt  IMG_20191215_112310.txt  IMG_20191215_112346.txt  IMG_20191215_112429.txt  IMG_20191215_112443.txt  IMG_20191215_112508.txt  (+6 more)
Model/Dataset_with_validation/labels/train/: IMG_1117.txt  IMG_1119.txt  IMG_1122.txt  IMG_1125.txt  IMG_1128.txt  IMG_1131.txt  IMG_1133.txt  IMG_1134.txt  IMG_1136.txt  IMG_1143.txt  IMG_1147.txt  IMG_1149.txt  IMG_1150.txt  IMG_1153.txt  IMG_1154.txt  IMG_1156.txt  IMG_1160.txt  IMG_1162.txt  IMG_1167.txt  IMG_1169.txt  IMG_1170.txt  IMG_1176.txt  IMG_1179.txt  IMG_1180.txt  IMG_1181.txt  IMG_1186.txt  IMG_1189.txt  IMG_1190.txt  IMG_1197.txt  IMG_1201.txt  IMG_1202.txt  IMG_1212.txt  IMG_1219.txt  IMG_1221.txt  IMG_1222.txt  IMG_1223.txt  IMG_1224.txt  IMG_1226.txt  IMG_1230.txt  IMG_1233.txt  (+76 more)
Model/Dataset_with_validation/labels/val/: IMG_1111.txt  IMG_1145.txt  IMG_1161.txt  IMG_1164.txt  IMG_1166.txt  IMG_1183.txt  IMG_1266.txt  IMG_1284.txt  IMG_1286.txt  IMG_1294.txt  IMG_20191215_111931.txt  IMG_20191215_112010.txt  IMG_20191215_112017.txt  IMG_20191215_112036.txt  IMG_20191215_112335.txt  IMG_20191215_112349.txt  IMG_20191215_112352.txt  IMG_20191215_112424.txt  IMG_20191215_112515.txt  IMG_20191215_112546.txt  (+6 more)
Model/Modelenv/: pyvenv.cfg
Model/Test/: check_file_yolo.py  draw_boxes.py
Model/result/: results.csv
Model/result/exp_yolov8/: args.yaml
Model/src/: check_file_yolo.py  convert_to_yolo.py  convert_yolo_to_onnx.py  generate_yaml.py  process_dataset.py  test_trained_Yolo.py
Model/src/Dataset_with_validation/: dataset.yaml
Raspberry/: CMakeLists.txt
Raspberry/AutoGreenenv/: pyvenv.cfg
Raspberry/include/: mqtt_client.hpp
Raspberry/src/: CMakeLists.txt
Raspberry/src/Camera/: CMakeLists.txt  Publisher.cpp  Subscriber.cpp  as.txt
Raspberry/src/MQTT/Camera/: Publisher.py  Subscriber.py
Sensors/Camera/: Camera.ino
Sensors/Camera/src/: main.cpp
Sensors/Motor/: Motor.ino
Sensors/Motor/src/: struct.hpp
Sensors/Motor_PlatformIO/src/: main.cpp
Sensors/src/MQTT/: Queue.hpp  library.json  mqtt.hpp
(+187 files in other folders)
